force-app/main/default/objects/Vehicle__c/fields/ActiveRecallCount__c.field-meta.xml
<CustomField>
    <fullName>ActiveRecallCount__c</fullName>
    <label>Active Recall Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>