force-app/main/default/objects/Vehicle__c/fields/ActiveServiceContractCount__c.field-meta.xml
<CustomField>
    <fullName>ActiveServiceContractCount__c</fullName>
    <label>Active Service Contract Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>