force-app/main/default/objects/Vehicle__c/fields/ActiveSubscriptionCount__c.field-meta.xml
<CustomField>
    <fullName>ActiveSubscriptionCount__c</fullName>
    <label>Active Subscription Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>