force-app/main/default/objects/Vehicle__c/fields/ActiveWarrantyCount__c.field-meta.xml
<CustomField>
    <fullName>ActiveWarrantyCount__c</fullName>
    <label>Active Warranty Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>