force-app/main/default/objects/Vehicle__c/fields/AverageMarketValue__c.field-meta.xml
<CustomField>
    <fullName>AverageMarketValue__c</fullName>
    <label>Average Market Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>