force-app/main/default/objects/Vehicle__c/fields/ChassisNumber__c.field-meta.xml
<CustomField>
    <fullName>ChassisNumber__c</fullName>
    <label>Chassis Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>