force-app/main/default/objects/Vehicle__c/fields/CurrentOwnerId__c.field-meta.xml
<CustomField>
    <fullName>CurrentOwnerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vehicle</relationshipLabel>
    <relationshipName>Vehicle</relationshipName>
    <type>Lookup</type>
</CustomField>