force-app/main/default/objects/Vehicle__c/fields/CylinderCount__c.field-meta.xml
<CustomField>
    <fullName>CylinderCount__c</fullName>
    <label>Cylinder Count</label>
    <length>80</length>
    <type>Text</type>
</CustomField>