force-app/main/default/objects/Vehicle__c/fields/ExteriorColor__c.field-meta.xml
<CustomField>
    <fullName>ExteriorColor__c</fullName>
    <label>Exterior Color</label>
    <length>80</length>
    <type>Text</type>
</CustomField>