force-app/main/default/objects/Vehicle__c/fields/FrontRimSize__c.field-meta.xml
<CustomField>
    <fullName>FrontRimSize__c</fullName>
    <label>Front Rim Size</label>
    <length>80</length>
    <type>Text</type>
</CustomField>