force-app/main/default/objects/Vehicle__c/fields/FrontTireSize__c.field-meta.xml
<CustomField>
    <fullName>FrontTireSize__c</fullName>
    <label>Front Tire Size</label>
    <length>80</length>
    <type>Text</type>
</CustomField>