force-app/main/default/objects/Vehicle__c/fields/FuelSource__c.field-meta.xml
<CustomField>
    <fullName>FuelSource__c</fullName>
    <label>Fuel Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>gasoline</fullName>
            </value>
            <value>
                <fullName>diesel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>