force-app/main/default/objects/Vehicle__c/fields/GearBoxType__c.field-meta.xml
<CustomField>
    <fullName>GearBoxType__c</fullName>
    <label>Gear Box Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>