force-app/main/default/objects/Vehicle__c/fields/HeadUnitName__c.field-meta.xml
<CustomField>
    <fullName>HeadUnitName__c</fullName>
    <label>Head Unit Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>