force-app/main/default/objects/Vehicle__c/fields/HeadUnitSecurityCode__c.field-meta.xml
<CustomField>
    <fullName>HeadUnitSecurityCode__c</fullName>
    <label>Head Unit Security Code</label>
    <length>150</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>