force-app/main/default/objects/Vehicle__c/fields/HighestMarketValue__c.field-meta.xml
<CustomField>
    <fullName>HighestMarketValue__c</fullName>
    <label>Highest Market Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>