force-app/main/default/objects/Vehicle__c/fields/IgnitionKeyCode__c.field-meta.xml
<CustomField>
    <fullName>IgnitionKeyCode__c</fullName>
    <label>Ignition Key Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>