force-app/main/default/objects/Vehicle__c/fields/InteriorColor__c.field-meta.xml
<CustomField>
    <fullName>InteriorColor__c</fullName>
    <label>Interior Color</label>
    <length>80</length>
    <type>Text</type>
</CustomField>