force-app/main/default/objects/Vehicle__c/fields/IsConnectedServiceActive__c.field-meta.xml
<CustomField>
    <fullName>IsConnectedServiceActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Connected Service Active</label>
    <type>Checkbox</type>
</CustomField>