force-app/main/default/objects/Vehicle__c/fields/IsRecallOpen__c.field-meta.xml
<CustomField>
    <fullName>IsRecallOpen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Recall Open</label>
    <type>Checkbox</type>
</CustomField>