force-app/main/default/objects/Vehicle__c/fields/IsTelematicsServiceActive__c.field-meta.xml
<CustomField>
    <fullName>IsTelematicsServiceActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Telematics Service Active</label>
    <type>Checkbox</type>
</CustomField>