force-app/main/default/objects/Vehicle__c/fields/LastOdometerReading__c.field-meta.xml
<CustomField>
    <fullName>LastOdometerReading__c</fullName>
    <label>Last Odometer Reading</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>