force-app/main/default/objects/Vehicle__c/fields/LatestResidualValue__c.field-meta.xml
<CustomField>
    <fullName>LatestResidualValue__c</fullName>
    <label>Latest Residual Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>