force-app/main/default/objects/Vehicle__c/fields/LatestResidualValueDate__c.field-meta.xml
<CustomField>
    <fullName>LatestResidualValueDate__c</fullName>
    <label>Latest Residual Value Date</label>
    <type>Date</type>
</CustomField>