force-app/main/default/objects/Vehicle__c/fields/LowestMarketValue__c.field-meta.xml
<CustomField>
    <fullName>LowestMarketValue__c</fullName>
    <label>Lowest Market Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>