force-app/main/default/objects/Vehicle__c/fields/MakeName__c.field-meta.xml
<CustomField>
    <fullName>MakeName__c</fullName>
    <label>Make Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>