force-app/main/default/objects/Vehicle__c/fields/ManufacturedDate__c.field-meta.xml
<CustomField>
    <fullName>ManufacturedDate__c</fullName>
    <label>Manufactured Date</label>
    <type>Date</type>
</CustomField>