force-app/main/default/objects/Vehicle__c/fields/ManufacturerWarrantyEndDate__c.field-meta.xml
<CustomField>
    <fullName>ManufacturerWarrantyEndDate__c</fullName>
    <label>Manufacturer Warranty End Date</label>
    <type>Date</type>
</CustomField>