force-app/main/default/objects/Vehicle__c/fields/ManufacturerWarrantyStartDt__c.field-meta.xml
<CustomField>
    <fullName>ManufacturerWarrantyStartDt__c</fullName>
    <label>Manufacturer Warranty Start Date</label>
    <type>Date</type>
</CustomField>