force-app/main/default/objects/Vehicle__c/fields/ManufacturingBatchNumber__c.field-meta.xml
<CustomField>
    <fullName>ManufacturingBatchNumber__c</fullName>
    <label>Manufacturing Batch Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>