force-app/main/default/objects/Vehicle__c/fields/ManufacturingPlantName__c.field-meta.xml
<CustomField>
    <fullName>ManufacturingPlantName__c</fullName>
    <label>Manufacturing Plant Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>