force-app/main/default/objects/Vehicle__c/fields/MarketPrice__c.field-meta.xml
<CustomField>
    <fullName>MarketPrice__c</fullName>
    <label>Market Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>