force-app/main/default/objects/Vehicle__c/fields/MarketPriceDate__c.field-meta.xml
<CustomField>
    <fullName>MarketPriceDate__c</fullName>
    <label>Market Price Date</label>
    <type>Date</type>
</CustomField>