force-app/main/default/objects/Vehicle__c/fields/MarketPriceSource__c.field-meta.xml
<CustomField>
    <fullName>MarketPriceSource__c</fullName>
    <label>Market Price Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CarCheck</fullName>
            </value>
            <value>
                <fullName>Autocar</fullName>
            </value>
            <value>
                <fullName>CareArena</fullName>
            </value>
            <value>
                <fullName>Zigwheels</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>