force-app/main/default/objects/Vehicle__c/fields/ModelName__c.field-meta.xml
<CustomField>
    <fullName>ModelName__c</fullName>
    <label>Model Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>