force-app/main/default/objects/Vehicle__c/fields/ModelYear__c.field-meta.xml
<CustomField>
    <fullName>ModelYear__c</fullName>
    <label>Model Year</label>
    <length>40</length>
    <type>Text</type>
</CustomField>