force-app/main/default/objects/Vehicle__c/fields/OdometerReadingDate__c.field-meta.xml
<CustomField>
    <fullName>OdometerReadingDate__c</fullName>
    <label>Odometer Reading Date</label>
    <type>Date</type>
</CustomField>