force-app/main/default/objects/Vehicle__c/fields/OdometerReadingUomId__c.field-meta.xml
<CustomField>
    <fullName>OdometerReadingUomId__c</fullName>
    <label>Odometer Reading Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>km</fullName>
            </value>
            <value>
                <fullName>시간</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>