force-app/main/default/objects/Vehicle__c/fields/RearRimSize__c.field-meta.xml
<CustomField>
    <fullName>RearRimSize__c</fullName>
    <label>Rear Rim Size</label>
    <length>80</length>
    <type>Text</type>
</CustomField>