force-app/main/default/objects/Vehicle__c/fields/RearTireSize__c.field-meta.xml
<CustomField>
    <fullName>RearTireSize__c</fullName>
    <label>Rear Tire Size</label>
    <length>80</length>
    <type>Text</type>
</CustomField>