force-app/main/default/objects/Vehicle__c/fields/RegistrationRegionCode__c.field-meta.xml
<CustomField>
    <fullName>RegistrationRegionCode__c</fullName>
    <label>Registration Region Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TX</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>