force-app/main/default/objects/Vehicle__c/fields/RegistrationValidityDate__c.field-meta.xml
<CustomField>
    <fullName>RegistrationValidityDate__c</fullName>
    <label>Registration Validity Date</label>
    <type>Date</type>
</CustomField>