force-app/main/default/objects/Vehicle__c/fields/SourceSystemIdentifier__c.field-meta.xml
<CustomField>
    <fullName>SourceSystemIdentifier__c</fullName>
    <label>Source System Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>