force-app/main/default/objects/Vehicle__c/fields/SourceSystemName__c.field-meta.xml
<CustomField>
    <fullName>SourceSystemName__c</fullName>
    <label>Source System Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>