force-app/main/default/objects/Vehicle__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>At Dealer Location</fullName>
            </value>
            <value>
                <fullName>In Service</fullName>
            </value>
            <value>
                <fullName>In Repair</fullName>
            </value>
            <value>
                <fullName>In Manufacturing</fullName>
            </value>
            <value>
                <fullName>Sold to Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>