force-app/main/default/objects/Vehicle__c/fields/SteeringType__c.field-meta.xml
<CustomField>
    <fullName>SteeringType__c</fullName>
    <label>Steering Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>