force-app/main/default/objects/Vehicle__c/fields/StockCode__c.field-meta.xml
<CustomField>
    <fullName>StockCode__c</fullName>
    <label>Stock Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>