force-app/main/default/objects/Vehicle__c/fields/TrimLevel__c.field-meta.xml
<CustomField>
    <fullName>TrimLevel__c</fullName>
    <label>Trim Level</label>
    <length>40</length>
    <type>Text</type>
</CustomField>