force-app/main/default/objects/Vehicle__c/fields/UpholsteryColor__c.field-meta.xml
<CustomField>
    <fullName>UpholsteryColor__c</fullName>
    <label>Upholstery Color</label>
    <length>80</length>
    <type>Text</type>
</CustomField>