force-app/main/default/objects/Vehicle__c/fields/UpholsteryType__c.field-meta.xml
<CustomField>
    <fullName>UpholsteryType__c</fullName>
    <label>Upholstery Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>