force-app/main/default/objects/Vehicle__c/fields/VehicleDefinition__c.field-meta.xml
<CustomField>
    <fullName>VehicleDefinition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Definition</label>
    <referenceTo>VehicleDefinition__c</referenceTo>
    <relationshipLabel>차량 (Vehicle Definition)</relationshipLabel>
    <relationshipName>vehicle1</relationshipName>
    <type>Lookup</type>
</CustomField>