force-app/main/default/objects/Vehicle__c/fields/VehicleDefinitionId__c.field-meta.xml
<CustomField>
    <fullName>VehicleDefinitionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Definition</label>
    <referenceTo>VehicleDefinition__c</referenceTo>
    <relationshipLabel>Vehicle</relationshipLabel>
    <relationshipName>Vehicle</relationshipName>
    <type>Lookup</type>
</CustomField>