force-app/main/default/objects/Vehicle__c/fields/VehicleIdentificationNumber__c.field-meta.xml
<CustomField>
    <fullName>VehicleIdentificationNumber__c</fullName>
    <label>Vehicle Identification Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>