force-app/main/default/objects/Vehicle__c/fields/VehicleRegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>VehicleRegistrationNumber__c</fullName>
    <label>Vehicle Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>